[tool.poetry]
name = "joyfuljudiciousconditions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0.2"
selenium = "4.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
